--- a/index.html
+++ b/index.html
@@ -34,7 +34,47 @@
         <h3>
 <a id="welcome-to-funfetti-chicken" class="anchor" href="#welcome-to-funfetti-chicken" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Funfetti Chicken</h3>
 
-<p>This is a group project the four of us are working on for a class at Franklin W. Olin College of Engineering. The purpose of this project is to better understand how sentiment analysis works and to refine it to pick up more than just positive vs. negative emotions. </p>
+<p>Funfetti Chicken Project Proposal</p>
+
+<h3>
+<a id="the-big-idea" class="anchor" href="#the-big-idea" aria-hidden="true"><span class="octicon octicon-link"></span></a>The Big Idea</h3>
+
+<p>The main idea of the project is to take the tone, lyrics, tempo, and rating of music to determine the emotion expressed by the music and then generate a food list that perfectly matches the song. We will be exploring the concept of audio sentiment analysis that goes beyond positive or negative and extends to anger, sadness, happiness, lethargy, and whatever else we can pull out of music. The minimum viable product will be an algorithm that judges a song’s emotion based on one of the four song aspects described above (e.g., takes in song lyrics and outputs an emotional evaluation). The stretch goal is to have algorithms looking at those four aspects, paying special attention to those we deem most capable of determining the emotion of songs, and returning a perfect accompanying food.</p>
+
+<h3>
+<a id="learning-goals" class="anchor" href="#learning-goals" aria-hidden="true"><span class="octicon octicon-link"></span></a>Learning Goals</h3>
+
+<p>We want to learn to analyze data more specifically and more in depth than we had in previous projects. We hope to learn to effectively interpret multiple different types of data at a time, and figure out how to prioritize each type or combine multiple types.</p>
+
+<h3>
+<a id="implementation-plan" class="anchor" href="#implementation-plan" aria-hidden="true"><span class="octicon octicon-link"></span></a>Implementation Plan</h3>
+
+<p>Our implementation would divide the overarching goal into multiple sub-functions or modules, which would converge to produce the output. </p>
+
+<p>Libraries which might prove useful: Pattern (for lyric analysis), Librosa (for tempo/key analysis), Echo Nest (for key/instrument analysis), </p>
+
+<h3>
+<a id="project-schedule" class="anchor" href="#project-schedule" aria-hidden="true"><span class="octicon octicon-link"></span></a>Project schedule</h3>
+
+<p>weeks 1-2: complete MVP
+weeks 3-4: finish algorithms for at least ¾ major song aspects
+weeks 5-6: finish algorithms, add the food side, combine the algorithms into one program that work together</p>
+
+<h3>
+<a id="collaboration-plan" class="anchor" href="#collaboration-plan" aria-hidden="true"><span class="octicon octicon-link"></span></a>Collaboration plan</h3>
+
+<p>We’re used to working on a coding problem individually for a long period of time until eventually we figure it out, but we decided that it may be beneficial to try a different approach for this project. We’re going to try pair programming to see if that method works better for us, and if it doesn’t work very well we may switch to individually working on modules of the program and then combining them. We have four elements of music that we plan to analyze, so that will divide nicely among four people whether we’re pair programming or not. Once we’ve finished the algorithms for these elements, we’ll put our combined code on github and work on it as a whole. </p>
+
+<h3>
+<a id="risks" class="anchor" href="#risks" aria-hidden="true"><span class="octicon octicon-link"></span></a>Risks</h3>
+
+<pre><code> Integrating the algorithms to analyze the music and translate them to food. In order to get an accurate translation we have to analyze many variables for each song and match them with correlated food. Getting the algorithms to effectively evaluate the music for sentiment as complicated as what we want could prove very tricky.
+</code></pre>
+
+<h3>
+<a id="additional-course-content" class="anchor" href="#additional-course-content" aria-hidden="true"><span class="octicon octicon-link"></span></a>Additional Course Content</h3>
+
+<p>If we were to cover ways in which text analysis determines sentiment, that would be helpful for us in branching our sentiment analysis beyond just positive or negative. Otherwise we would have to rely mostly on libraries already available instead of building our own tools.</p>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
