Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -141,6 +141,21 @@ In particular: we want to use a machine learning approach to prepare our sentime
 3. Depending on which ideas seem promising (and, using a few of our current ideas/possibilities), some "Technical discussion" as to what sorts of structures, algorithms, packages, etc. could be used to make ML ideas work.
 </code></pre>
 
+<hr>
+
+<h3>
+<a id="after-the-code-review" class="anchor" href="#after-the-code-review" aria-hidden="true"><span class="octicon octicon-link"></span></a>After the Code Review</h3>
+
+<h3>
+<a id="feedback-and-decisions-1" class="anchor" href="#feedback-and-decisions-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>Feedback and Decisions:</h3>
+
+<p>We did not get a large amount of feedback on what path we should take in terms of our machine learning choices, leaving us to decide on the path ourselves through independent research. It was agreed upon that having multiple outputs from the ML was superior to having just one, and after careful consideration we have decided to push off making multiple outputs our goal until our base model works. </p>
+
+<h3>
+<a id="reflection" class="anchor" href="#reflection" aria-hidden="true"><span class="octicon octicon-link"></span></a>Reflection</h3>
+
+<p>Overall our key questions went unanswered, most likely because we failed to communicate our needs correctly to those that knew enough to answer. Alternatively, there was no one in the group with the in depth knowledge of machine learning required to guide us in our quest. We do not believe this could have been solved with pre-class reading simply because the documentation for machine learning in general is dense and borderline impossible to summarize into a small reading source. Unfortunately, aside from attempting to better communicate our needs in terms of the machine learning guidance, there isn't much we could have done to get more from the review. </p>
+
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
