Fixing a small error in the site.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ Techniques from StackOverflow - specifically, <a href="http://stackoverflow.com/
 
 <p>[15  1  7  0  7 67]]</p>
 
-<p>SVC was able to identify a yearning song 24% of the time, a brooding song 43% of the time, an excited song 83% of the time, and an empowering song 65% of the time, making for a total accuracy of 57.5%.</p>
+<p>The algorithm we generated was able to identify an Empowering song 42% of the time, an Excited song 54% of the time, Sensual songs 52% of the time, Energizing songs 62% of the time, Lively songs 54% of the time, and Sentimental songs 69% of the time - making the total accuracy a hair above 55%.</p>
 
 <p>Each mood corresponds to a different food in our mood to food dictionary, which is currently personalized to accommodate the needs of Gabe, who only eats various quantities of bananas and plantains. When he enters the song ‘Never Gonna Give You Up,’ our program categorizes the song as brooding and determines that Gabe should eat bananas. When Gabe listens to yearning songs like Coldplay’s ‘Clocks,’ he tends to lose his appetite, so our program returns that Gabe should only eat a single banana in this instance. If Gabe were to listen to an empowering song, he would be told to eat plantains, and for an excited song a single plantain would be recommended.</p>
 
